# DomainRaptor

./: .gitignore  .pre-commit-config.yaml  DomainRaptor.py  README.md  REQUIREMENTS.md  extractor.py  issues.md  patterns.txt  pyproject.toml  report.html  ruff.toml
.github/ISSUE_TEMPLATE/: custom-feature-template.md
.github/workflows/: ci.yml
docs/: MANUAL_TESTING_REPORT.md  risk-algorithm.md
modules/args_parser/: args_module.py
modules/cli/: args_parser.py
modules/core/: data_transformer.py  regex_engine.py
modules/data_transformation/: data_tranformation_module.py  data_transformation_module.py
modules/enrichment/: shodan_client.py
modules/enumeration/passive/: shodan_enum.py
modules/log/: log_module.py
modules/log/print/: printing_module.py
modules/main_modules/: main_module.py
modules/output/: printer.py
modules/regex/: regex_module.py
modules/utils/: logger.py
src/domainraptor/: __init__.py
src/domainraptor/assessment/: __init__.py  base.py  dns_security.py  headers_checker.py  orchestrator.py  ssl_analyzer.py
src/domainraptor/cli/: __init__.py  main.py
src/domainraptor/cli/commands/: __init__.py  assess.py  compare.py  config.py  db.py  discover.py  recon.py  report.py  watch.py
src/domainraptor/core/: __init__.py  config.py  risk.py  types.py
src/domainraptor/discovery/: __init__.py  base.py  censys_client.py  crtsh.py  dns.py  hackertarget.py  nvd_client.py  orchestrator.py  shodan_client.py  whois_client.py  zoomeye_client.py
src/domainraptor/enrichment/: __init__.py  securitytrails.py  virustotal.py
src/domainraptor/storage/: __init__.py  database.py  repository.py
src/domainraptor/utils/: __init__.py  output.py
tests/: __init__.py  conftest.py  test_assessment_base.py  test_assessment_dns.py  test_assessment_headers.py  test_assessment_orchestrator.py  test_assessment_ssl.py  test_cli_assess.py  test_cli_commands.py  test_cli_compare.py  test_cli_config.py  test_cli_db.py  test_cli_discover.py  test_cli_main.py  test_cli_report.py  test_cli_watch.py  test_core_config.py  test_core_risk.py  test_core_types.py  test_discovery_base.py  test_discovery_crtsh.py  test_discovery_dns.py  test_discovery_hackertarget.py  test_discovery_orchestrator.py  test_discovery_shodan.py  test_discovery_whois.py  test_enrichment_securitytrails.py  test_enrichment_virustotal.py  test_shodan_client.py  test_storage_database.py  test_storage_repository.py  test_utils_output.py
wiki/: API-Keys.md  Commands-Assess.md  Commands-Compare.md  Commands-Database.md  Commands-Discover.md  Commands-Report.md  Commands-Watch.md  Configuration.md  Examples.md  Home.md  Installation.md  Output-Formats.md  Quick-Start.md  Scan-Modes.md  _Footer.md  _Sidebar.md
